# Gui-Video-Editor

./: .gitignore  CMakeLists.txt  ReadMe.md  ReadMe.txt  build.sh  configure.sh  install.sh  main  main.c  run.sh
include/: Audio.h  DecodeVideo.h  ImportDialog.h  MenuBar.h  RemuxVideo.h  SaveDialog.h  SourceMonitorPanel.h  SourcePanel.h  StreamVideo.h  Toolbar.h  Video.h  VideoData.h  Widget.h  Window.h
lib/: Audio.h  Video.h  VideoPlayer.h  Widget.h  Window.h  window.h
projects/: ReadMe.txt
scripts/: build.sh  configure.sh  install.sh  run.sh  uninstall.sh
src/: Audio.c  DecodeVideo.c  Image.c  ImportDialog.c  MenuBar.c  RemuxVideo.c  SaveDialog.c  SourcePanel.c  StreamVideo.c  ToolBar.c  Video.c  VideoData.c  VideoPlayer.c  Window.c  Window.cpp  main.c  main.cpp  videoplayer.c  window.c
